Fixed bug where multiple artists are not truncated with ellipsis

--- a/AAA_WEBAPP/assets/css/table.css
+++ b/AAA_WEBAPP/assets/css/table.css
@@ -9,21 +9,23 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
-.table-container > .row .title {
+.table-container > .row .text * {
+	width: 100%;
 	display: -webkit-box;
 	-webkit-line-clamp: 1;
 	-webkit-box-orient: vertical;
+
 	font-size: 1.2em;
 	line-height: 2em;
 	overflow: hidden;
-	width: 100%;
 }
 .table-container > .row .artist, .table-container > .row .added {
-	color: var(--current--text-low);
+	width: auto;
+	max-width: 70%;
+	padding: 0em 0.5em;
 	font-size: 0.9em;
 	line-height: 1em;
-	width: auto;
-	padding: 0em 0.5em;
+	color: var(--current--text-low);
 }
 .table-container > .row:not(:last-child) {
 	border-bottom: 2px solid var(--current--text);
